--- a/views/header.pug
+++ b/views/header.pug
@@ -25,6 +25,14 @@ html
             div(class="container-fluid")
                 a(class="navbar-brand", href="/") Mandelbrot Clustering
                 
+                div(class="collapse navbar-collapse" id="navbarNavDropdown")
+                    ul(class="navbar-nav")
+                        li(class="nav-item active")
+                            a(class="nav-link" href="/multiple") Points multiples
+
+                        li(class="nav-item active")
+                            a(class="nav-link" href="/multiple") Code source 
+                
         br
         br
         br
